add_library(vdb STATIC
    blob-headers.c
    blob.c
    bytecode.c
    cast.c
    column-cmn.c
    column.c
    compare.c
    cursor-cmn.c
    cursor-table.c
    cursor-view.c
    cursor.c
    database-cmn.c
    database-depend.c
    database-load.c
    database.c
    dbmgr-cmn.c
    dbmgr.c
    delta_average.c
    environment-read.c
    fixed-row-len.c
    index_insert.c
    index_lookup.c
    index_project.c
    linker-cmn.c
    linker-int.c
    linker.c
    merge.c
    meta-append.c
    meta-attr-read.c
    meta-attr-write.c
    meta-read.c
    meta-value.c
    meta-write.c
    page-map.c
    parameter-read.c
    phys-cmn.c
    phys-load.c
    phys.c
    prod-cmn.c
    prod-expr.c
    prod-func.c
    prod.c
    range-validate.c
    redimension.c
    report-vdb.c
    row-id.c
    row-len.c
    schema-db.c
    schema-dump.c
    schema-eval.c
    schema-expr.c
    schema-func.c
    schema-int.c
    schema-parse.c
    schema-prod.c
    schema-tbl.c
    schema-tok.c
    schema-type.c
    schema-view.c
    schema.c
    split.c
    table-cmn.c
    table-load.c
    table.c
    transpose.c
    view.c
    wcolumn.c
    wcursor.c
    wdatabase.c
    wdbmgr.c
    wlinker.c
    wphys.c
    wprod.c
    wtable.c
)

add_definitions (-D__mod__="libs/vdb")