add_library(vxf STATIC
    add-row-id.c
    bit_or.c
    bunzip.c
    bzip.c
    ceil.c
    checksum.c
    clip.c
    cut.c
    delta.c
    deriv.c
    diff.c
    echo.c
    entrez.c
    exists.c
    extract_token.c
    floor.c
    funzip.c
    fzip.c
    integral.c
    integral_0.c
    irzip.c
    iunzip.c
    izip.c
    lower-case-tech-reads.c
    map.c
    max.c
    min.c
    outlier-decoder.c
    outlier-encoder.c
    pack.c
    paste.c
    rand_4na_2na.c
    rldecode.c
    rlencode.c
    round.c
    simple-sub-select.c
    sprintf.c
    strtonum.c
    subtract-row-id.c
    sum.c
    trim.c
    trunc.c
    undelta.c
    unpack.c
    unzip.c
    unzstd.c
    vec-sum.c
    wgs-tokenize-accession.c
    zip.c
    zstd.c
)

add_definitions (-D__mod__="libs/vxf")